tests/fixtures/negative/release-engineering/MergeConflictMarkerLeftover.kt
package com.example.releaseengineering

val x = 1
val y = 2
